// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders ./src/segmented/demo/basic.vue correctly 1`] = `
"<div class="xy-segmented css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
    </label></div>
</div>"
`;

exports[`renders ./src/segmented/demo/block.vue correctly 1`] = `
"<div class="xy-segmented css-dev-only-do-not-override-1p3hq3p xy-segmented-block">
  <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
      <div class="xy-segmented-item-label" title="123">123</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="456">456</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="longtext-longtext-longtext-longtext">longtext-longtext-longtext-longtext</div>
    </label></div>
</div>"
`;

exports[`renders ./src/segmented/demo/custom.vue correctly 1`] = `
"<div class="xy-segmented css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
      <div class="xy-segmented-item-label" title="">
        <div style="padding: 4px 4px;"><span style="background-color: rgb(245, 106, 0);" class="xy-avatar xy-avatar-circle xy-avatar-image css-dev-only-do-not-override-1p3hq3p"><img src="https://joeschmoe.io/api/v1/random"></span>
          <div>user1</div>
        </div>
      </div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="">
        <div style="padding: 4px 4px;"><span style="background-color: rgb(245, 106, 0);" class="xy-avatar xy-avatar-circle css-dev-only-do-not-override-1p3hq3p"><span class="xy-avatar-string" style="opacity: 0;">K</span></span>
          <div>user2</div>
        </div>
      </div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="">
        <div style="padding: 4px 4px;"><span style="background-color: rgb(245, 106, 0);" class="xy-avatar xy-avatar-circle xy-avatar-icon css-dev-only-do-not-override-1p3hq3p"><span role="img" aria-label="user" class="anticon anticon-user"><svg focusable="false" data-icon="user" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"></path></svg><!----></span></span>
          <div>user3</div>
        </div>
      </div>
    </label></div>
</div>
<br>
<br>
<div class="xy-segmented css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
      <div class="xy-segmented-item-label" title="">
        <div style="padding: 4px 4px;">
          <div>Spring</div>
          <div>Jan-Mar</div>
        </div>
      </div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="">
        <div style="padding: 4px 4px;">
          <div>Summer</div>
          <div>Apr-Jun</div>
        </div>
      </div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="">
        <div style="padding: 4px 4px;">
          <div>Autumn</div>
          <div>Jul-Sept</div>
        </div>
      </div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="">
        <div style="padding: 4px 4px;">
          <div>Winter</div>
          <div>Oct-Dec</div>
        </div>
      </div>
    </label></div>
</div>"
`;

exports[`renders ./src/segmented/demo/disabled.vue correctly 1`] = `
"<div>
  <div class="xy-segmented css-dev-only-do-not-override-1p3hq3p xy-segmented-disabled">
    <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item-disabled xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" disabled="" checked="">
        <div class="xy-segmented-item-label" title="Map">Map</div>
      </label><label class="xy-segmented-item-disabled xy-segmented-item"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="Transit">Transit</div>
      </label><label class="xy-segmented-item-disabled xy-segmented-item"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="Satellite">Satellite</div>
      </label></div>
  </div><br><br>
  <div class="xy-segmented css-dev-only-do-not-override-1p3hq3p">
    <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
        <div class="xy-segmented-item-label" title="Daily">Daily</div>
      </label><label class="xy-segmented-item-disabled xy-segmented-item"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="">Weekly</div>
      </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
        <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
      </label><label class="xy-segmented-item-disabled xy-segmented-item"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="">Quarterly</div>
      </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
        <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
      </label></div>
  </div>
</div>"
`;

exports[`renders ./src/segmented/demo/dynamic.vue correctly 1`] = `
"<div class="xy-segmented css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label></div>
</div>
<br>
<br>
<button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Load More</span></button>"
`;

exports[`renders ./src/segmented/demo/size.vue correctly 1`] = `
"<div class="xy-segmented css-dev-only-do-not-override-1p3hq3p xy-segmented-lg">
  <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
    </label></div>
</div>
<br>
<br>
<div class="xy-segmented css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
    </label></div>
</div>
<br>
<br>
<div class="xy-segmented css-dev-only-do-not-override-1p3hq3p xy-segmented-sm">
  <div class="xy-segmented-group"><span style="display: contents;"><!----></span><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" checked="">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
    </label></div>
</div>"
`;
